[package]
name = "oml-audio-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "^0.18.0"

[dependencies.oml-audio]
#version = "1.3.5"
path = "../oml-audio"
default-features = false
features = []

