[package]
name = "oml-audio-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.20.0"

[dependencies.oml-audio]
version = "0.6.4-dev"
path = "../oml-audio"
default-features = false
features = [ "use_miniaudio" ]

[patch.crates-io]
ep-miniaudio-sys = { git = 'https://github.com/andreasOM/miniaudio-rs/' }
miniaudio = { git = 'https://github.com/andreasOM/miniaudio-rs/' }
oml-audio = { git = 'https://github.com/andreasOM/oml-audio', branch = 'update-miniaudio' }
